# planetar-sat

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA-SOURCES.md
src/planetar_sat/: __main__.py  cli.py  config.py
src/planetar_sat/bus/: chat.py  publisher.py  zmesg.py
src/planetar_sat/detect/: cfar.py  chip.py  geocode.py  landmask.py
src/planetar_sat/fetch/: aoi.py  copernicus.py
src/planetar_sat/track/: tracker.py
tests/: test_cfar.py  test_geocode.py  test_landmask.py  test_tracker.py  test_zmesg_roundtrip.py
