[project]
name = "planetar-sat"
version = "0.1.0"
description = "Satellite imagery fetch + SAR boat detection + tracking microservice for planetar / zdefence"
authors = [{ name = "Steven Ness", email = "sness@sness.net" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.11",
    "rasterio>=1.3",
    "shapely>=2.0",
    "click>=8.1",
    "global-land-mask>=1.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "ultralytics>=8.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
planetar-sat = "planetar_sat.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
